--- a/Merriam_Webster's.html
+++ b/Merriam_Webster's.html
@@ -26,26 +26,28 @@
 
 <div id="grid">
   <ul style="background-color:#21618C" class="table">
-    <font size="6">INVENTORY</font>
-    <li style="margin-top:10px; margin-bottom:10px;"><a href="Show_yourself.html" class="inactive">Show Yourself</a></li>
-    <li style="margin-top:10px; margin-bottom:10px;"><a href="Karazhan_library.html" class="inactive">Karazhan Library</a></li>
-    <li style="margin-top:10px; margin-bottom:10px;"><a href="懲毖錄.html" class="inactive">懲毖錄</a></li>
-    <br>
     <font size="6">STATUS</font>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Show_yourself.html" class="inactive">Show Yourself</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="懲毖錄.html" class="inactive">懲毖錄</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Karazhan_library.html" class="inactive">Karazhan Library</a></li>
+    <br>
+
+    <font size="6">SKILLS</font>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="The_war_of_genesis.html" class="inactive">The War of Genesis</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="The_war_of_taiji.html" class="inactive">The War of Taiji</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Strategy_and_tactics.html" class="inactive">Strategy & Tactics</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Merriam_Webster's.html" class="active">Merriam Webster's</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="以虞待不虞者勝.html" class="inactive">以虞待不虞者勝</a></li>
+    <br>
+
+    <font size="6">INVENTORY</font>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="Game_industry_trends.html" class="inactive">Game Trends</a></li>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="AI_industry_trends.html" class="inactive">AI Trends</a></li>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="Science_and_technology.html" class="inactive">Science & Tech.</a></li>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="The_economist.html" class="inactive">The Economist</a></li>
-    <br>
-    <font size="6">SKILLS</font>
-    <li style="margin-top:10px; margin-bottom:10px;"><a href="The_war_of_genesis.html" class="inactive">The War of Genesis</a></li>
-    <li style="margin-top:10px; margin-bottom:10px;"><a href="Stock_investment.html" class="inactive">Stock Investment</a></li>
-    <li style="margin-top:10px; margin-bottom:10px;"><a href="Strategy_and_tactics.html" class="inactive">Strategy & Tactics</a></li>
-    <li style="margin-top:10px; margin-bottom:10px;"><a href="Merriam_Webster's.html" class="active">Merriam Webster's</a></li>
-    <li style="margin-top:10px; margin-bottom:10px;"><font size="4"><a href="夫學須靜也_才須學也.html" class="inactive">夫學須靜也 才須學也</a></font></li>
   </ul>
   <div id="contents">
-    <img src="Merriam_Webster's.jpg" width="100%">
+    <img src="설화난영참.jpg" width="100%">
 
   <h1>Merriam Webster's[Lv.1]</h1><br><br><br>
 
@@ -53,13 +55,44 @@
 
 
 
-  <a>[July 17th,2020]</a>
+
+  <a></a><a>[July 19th,2020]</a>
+
+  <p>
+    manifesto, tarnish, envisage, sedimentary, cannibalize,<br>
+    consolidate, splinter group, quip, farsighted, underpin,<br>
+    guesstimate, alleviate, obtrusive, dismantle, uphill<br><br>
+
+    lucrative, run riot, feast on, hindsight, drain away,<br>
+    defang, fillip, hubris, marauder, collateral,<br>
+    unfazed, illiberal, technosphere, brush off, deteriorate<br>
+  </p><br>
+
+
+  <a></a><a>[July 18th,2020]</a>
+
+  <p>
+    perpetuate, cross the aisle, solace, pan out, clamour,<br>
+    repeal, supremacist, gruesome, lunatic fringe, amigo,<br>
+    edifice, tributary, erupt, veneer, munch<br><br>
+
+    crook, autocrat, despot, incitement, laureate,<br>
+    cavernous, shrivel, bumf, lurch, podium,<br>
+    disdain, trickle down, feud, arcane, resort to,<br>
+  </p><br>
+
+
+  <a></a><a>[July 17th,2020]</a>
 
   <p>
     consummate, brash, garrulous, tout, condone,<br>
     presumptive, loquacity, meander, ravage, blight,<br>
-    lukewarm, akin to, rancour, spate, filibuster<br>
-  </p>
+    lukewarm, akin to, rancour, spate, filibuster<br><br>
+
+    antithesis, bereft, theocracy, stride, cudgel,<br>
+    plume, sorrel, chard, bountiful, bleak,<br>
+    cowed, simulacrum, browbeat, rebuke, linchpin<br>
+  </p><br>
 
 
   <a>[July 16th,2020]</a>
@@ -197,23 +230,25 @@
 
 
   <ul style="background-color:#21618C" class="table">
-    <font size="6">INVENTORY</font>
-    <li style="margin-top:10px; margin-bottom:10px;"><a href="Show_yourself.html" class="inactive">Show Yourself</a></li>
-    <li style="margin-top:10px; margin-bottom:10px;"><a href="Karazhan_library.html" class="inactive">Karazhan Library</a></li>
-    <li style="margin-top:10px; margin-bottom:10px;"><a href="懲毖錄.html" class="inactive">懲毖錄</a></li>
-    <br>
     <font size="6">STATUS</font>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Show_yourself.html" class="inactive">Show Yourself</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="懲毖錄.html" class="inactive">懲毖錄</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Karazhan_library.html" class="inactive">Karazhan Library</a></li>
+    <br>
+
+    <font size="6">SKILLS</font>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="The_war_of_genesis.html" class="inactive">The War of Genesis</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="The_war_of_taiji.html" class="inactive">The War of Taiji</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Strategy_and_tactics.html" class="inactive">Strategy & Tactics</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Merriam_Webster's.html" class="active">Merriam Webster's</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="以虞待不虞者勝.html" class="inactive">以虞待不虞者勝</a></li>
+    <br>
+
+    <font size="6">INVENTORY</font>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="Game_industry_trends.html" class="inactive">Game Trends</a></li>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="AI_industry_trends.html" class="inactive">AI Trends</a></li>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="Science_and_technology.html" class="inactive">Science & Tech.</a></li>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="The_economist.html" class="inactive">The Economist</a></li>
-    <br>
-    <font size="6">SKILLS</font>
-    <li style="margin-top:10px; margin-bottom:10px;"><a href="The_war_of_genesis.html" class="inactive">The War of Genesis</a></li>
-    <li style="margin-top:10px; margin-bottom:10px;"><a href="Stock_investment.html" class="inactive">Stock Investment</a></li>
-    <li style="margin-top:10px; margin-bottom:10px;"><a href="Strategy_and_tactics.html" class="inactive">Strategy & Tactics</a></li>
-    <li style="margin-top:10px; margin-bottom:10px;"><a href="Merriam_Webster's.html" class="active">Merriam Webster's</a></li>
-    <li style="margin-top:10px; margin-bottom:10px;"><font size="4"><a href="夫學須靜也_才須學也.html" class="inactive">夫學須靜也 才須學也</a></font></li>
   </ul>
 
   </div>
