--- a/The_economist.html
+++ b/The_economist.html
@@ -26,34 +26,51 @@
 
 <div id="grid">
   <ul style="background-color:#21618C" class="table">
-    <font size="6">INVENTORY</font>
-    <li style="margin-top:10px; margin-bottom:10px;"><a href="Show_yourself.html" class="inactive">Show Yourself</a></li>
-    <li style="margin-top:10px; margin-bottom:10px;"><a href="Karazhan_library.html" class="inactive">Karazhan Library</a></li>
-    <li style="margin-top:10px; margin-bottom:10px;"><a href="懲毖錄.html" class="inactive">懲毖錄</a></li>
-    <br>
     <font size="6">STATUS</font>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Show_yourself.html" class="inactive">Show Yourself</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="懲毖錄.html" class="inactive">懲毖錄</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Karazhan_library.html" class="inactive">Karazhan Library</a></li>
+    <br>
+
+    <font size="6">SKILLS</font>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="The_war_of_genesis.html" class="inactive">The War of Genesis</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="The_war_of_taiji.html" class="inactive">The War of Taiji</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Strategy_and_tactics.html" class="inactive">Strategy & Tactics</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Merriam_Webster's.html" class="inactive">Merriam Webster's</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="以虞待不虞者勝.html" class="inactive">以虞待不虞者勝</a></li>
+    <br>
+
+    <font size="6">INVENTORY</font>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="Game_industry_trends.html" class="inactive">Game Trends</a></li>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="AI_industry_trends.html" class="inactive">AI Trends</a></li>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="Science_and_technology.html" class="inactive">Science & Tech.</a></li>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="The_economist.html" class="active">The Economist</a></li>
-    <br>
-    <font size="6">SKILLS</font>
-    <li style="margin-top:10px; margin-bottom:10px;"><a href="The_war_of_genesis.html" class="inactive">The War of Genesis</a></li>
-    <li style="margin-top:10px; margin-bottom:10px;"><a href="Stock_investment.html" class="inactive">Stock Investment</a></li>
-    <li style="margin-top:10px; margin-bottom:10px;"><a href="Strategy_and_tactics.html" class="inactive">Strategy & Tactics</a></li>
-    <li style="margin-top:10px; margin-bottom:10px;"><a href="Merriam_Webster's.html" class="inactive">Merriam Webster's</a></li>
-    <li style="margin-top:10px; margin-bottom:10px;"><font size="4"><a href="夫學須靜也_才須學也.html" class="inactive">夫學須靜也 才須學也</a></font></li>
   </ul>
+
   <div id="contents">
-  <img src="Economist-Never-stop-questioning.png" width="100%">
+  <img src="blizzardstorm.gif" width="100%">
 
 
-  <h1>The Economist[Lv.19]</h1><br><br><br>
+  <h1>The Economist[Lv.21]</h1><br><br><br>
 
 
 
 
 
+
+
+
+  <a href="https://www.youtube.com/watch?v=W2G_S1wkExg" target="_blank" title="삼프로TV_경제의신과함께">
+    특별 인터뷰 : 신재생에너지 시대에 수소차와 전기차는 함께 간다 f.김세훈 전무, 한병화 연구위원</a><br>
+
+  <a href="https://www.youtube.com/watch?v=qkK7xjN6o4U&t=3s" target="_blank" title="삼프로TV_경제의신과함께">
+    신흥국의 외환보유량.. 금융위기 위험 **? f.김효진 연구위원</a><br>
+
+  <a href="https://www.youtube.com/watch?v=lsPymKJDJrU" target="_blank" title="JD부자연구소">
+    미국과 러시아가 패권을 놓고 다투는 것</a><br>
+
+  <a href="https://www.youtube.com/watch?v=mk8mDlGWpxM" target="_blank" title="삼프로TV_경제의신과함께">
+    갑작스런 중국의 폭락세.. 추세의 변화는 아니다</a><br>
 
   <a href="https://www.youtube.com/watch?v=GnFzCJvewOw" target="_blank" title="JD부자연구소">
     이 법 통과 안 되면 나스닥 폭락한다</a><br>
@@ -712,23 +729,25 @@
 
 
   <ul style="background-color:#21618C" class="table">
-    <font size="6">INVENTORY</font>
-    <li style="margin-top:10px; margin-bottom:10px;"><a href="Show_yourself.html" class="inactive">Show Yourself</a></li>
-    <li style="margin-top:10px; margin-bottom:10px;"><a href="Karazhan_library.html" class="inactive">Karazhan Library</a></li>
-    <li style="margin-top:10px; margin-bottom:10px;"><a href="懲毖錄.html" class="inactive">懲毖錄</a></li>
-    <br>
     <font size="6">STATUS</font>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Show_yourself.html" class="inactive">Show Yourself</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="懲毖錄.html" class="inactive">懲毖錄</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Karazhan_library.html" class="inactive">Karazhan Library</a></li>
+    <br>
+
+    <font size="6">SKILLS</font>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="The_war_of_genesis.html" class="inactive">The War of Genesis</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="The_war_of_taiji.html" class="inactive">The War of Taiji</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Strategy_and_tactics.html" class="inactive">Strategy & Tactics</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Merriam_Webster's.html" class="inactive">Merriam Webster's</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="以虞待不虞者勝.html" class="inactive">以虞待不虞者勝</a></li>
+    <br>
+
+    <font size="6">INVENTORY</font>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="Game_industry_trends.html" class="inactive">Game Trends</a></li>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="AI_industry_trends.html" class="inactive">AI Trends</a></li>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="Science_and_technology.html" class="inactive">Science & Tech.</a></li>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="The_economist.html" class="active">The Economist</a></li>
-    <br>
-    <font size="6">SKILLS</font>
-    <li style="margin-top:10px; margin-bottom:10px;"><a href="The_war_of_genesis.html" class="inactive">The War of Genesis</a></li>
-    <li style="margin-top:10px; margin-bottom:10px;"><a href="Stock_investment.html" class="inactive">Stock Investment</a></li>
-    <li style="margin-top:10px; margin-bottom:10px;"><a href="Strategy_and_tactics.html" class="inactive">Strategy & Tactics</a></li>
-    <li style="margin-top:10px; margin-bottom:10px;"><a href="Merriam_Webster's.html" class="inactive">Merriam Webster's</a></li>
-    <li style="margin-top:10px; margin-bottom:10px;"><font size="4"><a href="夫學須靜也_才須學也.html" class="inactive">夫學須靜也 才須學也</a></font></li>
   </ul>
 
   </div>
