--- a/懲毖錄.html
+++ b/懲毖錄.html
@@ -26,26 +26,29 @@
 
 <div id="grid">
   <ul style="background-color:#21618C" class="table">
-    <font size="6">INVENTORY</font>
-    <li style="margin-top:10px; margin-bottom:10px;"><a href="Show_yourself.html" class="inactive">Show Yourself</a></li>
-    <li style="margin-top:10px; margin-bottom:10px;"><a href="Karazhan_library.html" class="inactive">Karazhan Library</a></li>
-    <li style="margin-top:10px; margin-bottom:10px;"><a href="懲毖錄.html" class="active">懲毖錄</a></li>
-    <br>
     <font size="6">STATUS</font>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Show_yourself.html" class="inactive">Show Yourself</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="懲毖錄.html" class="active">懲毖錄</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Karazhan_library.html" class="inactive">Karazhan Library</a></li>
+    <br>
+
+    <font size="6">SKILLS</font>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="The_war_of_genesis.html" class="inactive">The War of Genesis</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="The_war_of_taiji.html" class="inactive">The War of Taiji</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Strategy_and_tactics.html" class="inactive">Strategy & Tactics</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Merriam_Webster's.html" class="inactive">Merriam Webster's</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="以虞待不虞者勝.html" class="inactive">以虞待不虞者勝</a></li>
+    <br>
+
+    <font size="6">INVENTORY</font>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="Game_industry_trends.html" class="inactive">Game Trends</a></li>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="AI_industry_trends.html" class="inactive">AI Trends</a></li>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="Science_and_technology.html" class="inactive">Science & Tech.</a></li>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="The_economist.html" class="inactive">The Economist</a></li>
-    <br>
-    <font size="6">SKILLS</font>
-    <li style="margin-top:10px; margin-bottom:10px;"><a href="The_war_of_genesis.html" class="inactive">The War of Genesis</a></li>
-    <li style="margin-top:10px; margin-bottom:10px;"><a href="Stock_investment.html" class="inactive">Stock Investment</a></li>
-    <li style="margin-top:10px; margin-bottom:10px;"><a href="Strategy_and_tactics.html" class="inactive">Strategy & Tactics</a></li>
-    <li style="margin-top:10px; margin-bottom:10px;"><a href="Merriam_Webster's.html" class="inactive">Merriam Webster's</a></li>
-    <li style="margin-top:10px; margin-bottom:10px;"><font size="4"><a href="夫學須靜也_才須學也.html" class="inactive">夫學須靜也 才須學也</a></font></li>
   </ul>
+
   <div id="contents">
-    <img src="懲毖錄2.jpg" width="100%">
+    <img src="remember.jpg" width="100%">
 
     <h1 style="text-align:center">懲毖錄[Lv.6]</h1><br>
     <h3 style="text-align:center">豫其懲而毖役患(미리 징계하여 후환을 경계한다)<br>
@@ -56,6 +59,24 @@
 
 
 
+
+
+
+
+  <a href="https://www.youtube.com/watch?v=AQJEZA0WQKg" title="Red Pig Academy">
+    삼국지 2막의 시작[임용한의 진짜 三國志_23] 형주를 사수하라</a><br>
+
+  <a href="https://www.youtube.com/watch?v=Zi-fOm5IrCw" title="Red Pig Academy">
+    이 쯤에서 꼭 다시봐야 할 관도대전 3편을 한번에...!![임용한의 진짜 三國志_번외편]</a><br>
+
+  <a href="https://www.youtube.com/watch?v=XwrL4SZXeYg" title="Red Pig Academy">
+    조조의 분노[임용한의 진짜 三國志_22]조조가 조조했다</a><br>
+
+  <a href="https://www.youtube.com/watch?v=N6_o-o5Nk7" title="Red Pig Academy">
+    눈치싸움은 끝났다.지금부터 본게임이 시작된다[임용한의 진짜 三國志_21]</a><br>
+
+  <a href="https://www.youtube.com/watch?v=J0kpGKm5wxg" title="Red Pig Academy">
+    조조와 유비의 치열한 눈치싸움[임용한의 진짜 三國志_20] 두 영웅의 위험한 동거</a><br>
 
   <a href="https://www.youtube.com/watch?v=MvEmNtqt_p4" title="Red Pig Academy">
     삼국지 최고의 풍운아[임용한의 진짜 三國志_19]여포의 마지막 불꽃</a><br>
@@ -113,9 +134,6 @@
 
   <a href="https://www.youtube.com/watch?v=ojtWX1CJEm8" title="Red Pig Academy">
     거대전쟁의 서막. 세력의 탄생. 원소-영화보다 재미있다 ☆임용한의 진짜 삼국지[三國志_ 01]</a><br>
-
-  <a href="https://www.youtube.com/watch?v=Zi-fOm5IrCw" title="Red Pig Academy">
-    이 쯤에서 꼭 다시봐야 할 관도대전 3편을 한번에...!![임용한의 진짜 三國志_번외편]</a><br>
 
   <a href="https://www.youtube.com/watch?v=CoiXNky3tHY" title="국방TV">
     [순삭밀톡]삼국지뒤집기★유비, 패왕인가? 성군인가? 유비패왕설의 진실</a><br>
@@ -262,23 +280,25 @@
 
 
   <ul style="background-color:#21618C" class="table">
-    <font size="6">INVENTORY</font>
-    <li style="margin-top:10px; margin-bottom:10px;"><a href="Show_yourself.html" class="inactive">Show Yourself</a></li>
-    <li style="margin-top:10px; margin-bottom:10px;"><a href="Karazhan_library.html" class="inactive">Karazhan Library</a></li>
-    <li style="margin-top:10px; margin-bottom:10px;"><a href="懲毖錄.html" class="active">懲毖錄</a></li>
-    <br>
     <font size="6">STATUS</font>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Show_yourself.html" class="inactive">Show Yourself</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="懲毖錄.html" class="active">懲毖錄</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Karazhan_library.html" class="inactive">Karazhan Library</a></li>
+    <br>
+
+    <font size="6">SKILLS</font>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="The_war_of_genesis.html" class="inactive">The War of Genesis</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="The_war_of_taiji.html" class="inactive">The War of Taiji</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Strategy_and_tactics.html" class="inactive">Strategy & Tactics</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Merriam_Webster's.html" class="inactive">Merriam Webster's</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="以虞待不虞者勝.html" class="inactive">以虞待不虞者勝</a></li>
+    <br>
+
+    <font size="6">INVENTORY</font>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="Game_industry_trends.html" class="inactive">Game Trends</a></li>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="AI_industry_trends.html" class="inactive">AI Trends</a></li>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="Science_and_technology.html" class="inactive">Science & Tech.</a></li>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="The_economist.html" class="inactive">The Economist</a></li>
-    <br>
-    <font size="6">SKILLS</font>
-    <li style="margin-top:10px; margin-bottom:10px;"><a href="The_war_of_genesis.html" class="inactive">The War of Genesis</a></li>
-    <li style="margin-top:10px; margin-bottom:10px;"><a href="Stock_investment.html" class="inactive">Stock Investment</a></li>
-    <li style="margin-top:10px; margin-bottom:10px;"><a href="Strategy_and_tactics.html" class="inactive">Strategy & Tactics</a></li>
-    <li style="margin-top:10px; margin-bottom:10px;"><a href="Merriam_Webster's.html" class="inactive">Merriam Webster's</a></li>
-    <li style="margin-top:10px; margin-bottom:10px;"><font size="4"><a href="夫學須靜也_才須學也.html" class="inactive">夫學須靜也 才須學也</a></font></li>
   </ul>
 
   </div>
