--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
 
   <div class="row">
     <div class="column1" align="center" style="color:white; background-color:#1B2631; list-style: none;">
-      <div style="font-size: 40px;">INVENTORY</div>
-    </div>
-    <div class="column1" align="center" style="color:white; background-color:#212F3C; list-style: none;">
       <div style="font-size: 40px;">STATUS</div>
     </div>
-    <div class="column1" align="center" style="color:white; background-color:#283747; list-style: none;">
+    <div class="column1" align="center" style="color:white; background-color:#212F3C; list-style: none;">
       <div style="font-size: 40px;">SKILLS</div>
+    </div>
+    <div class="column1" align="center" style="color:white; background-color:#283747; list-style: none;">
+      <div style="font-size: 40px;">INVENTORY</div>
     </div>
   </div>
 
@@ -70,30 +70,30 @@
     <ul class="column2" align="center" style="font-size: 25px; background-color:#1B4F72; list-style: none; margin-top:0px; margin-bottom:0px;">
         <div>
           <li style="background-color:#1B2631; margin-top:3px; margin-bottom:3px;"><a href="Show_yourself.html" class="inactive" style="color:#1B4F72">Show Yourself</a></li>
-          <li style="background-color:#1B2631; margin-top:3px; margin-bottom:3px;"><a href="Karazhan_library.html" class="inactive" style="color:#1B4F72">Karazhan Library</a></li>
           <li style="background-color:#1B2631; margin-top:3px; margin-bottom:3px;"><a href="懲毖錄.html" class="inactive" style="color:#1B4F72">懲毖錄</a></li>
+          <li style="background-color:#1B2631; margin-top:3px; margin-bottom:3px;"><a href="Karazhan_library.html" class="inactive" style="color:#1B4F72">Karazhan Library</a></li>
         </div>
     </ul>
     <ul class="column2" align="center" style="font-size: 25px; background-color:#2874A6; list-style: none; margin-top:0px; margin-bottom:0px;">
         <div>
-          <li style="background-color:#212F3C; margin-top:3px; margin-bottom:3px;"><a href="Game_industry_trends.html" class="inactive" style="color:#2874A6">Game Trends</a></li>
-          <li style="background-color:#212F3C; margin-top:3px; margin-bottom:3px;"><a href="AI_industry_trends.html" class="inactive" style="color:#2874A6">AI Trends</a></li>
-          <li style="background-color:#212F3C; margin-top:3px; margin-bottom:3px;"><a href="Science_and_technology.html" class="inactive" style="color:#2874A6">Science & Tech.</a></li>
-          <li style="background-color:#212F3C; margin-top:3px; margin-bottom:3px;"><a href="The_economist.html" class="inactive" style="color:#2874A6">The Economist</a></li>
+          <li style="background-color:#212F3C; margin-top:3px; margin-bottom:3px;"><a href="The_war_of_genesis.html" class="inactive" style="color:#2874A6">The War of Genesis</a></li>
+          <li style="background-color:#212F3C; margin-top:3px; margin-bottom:3px;"><a href="The_war_of_taiji.html" class="inactive" style="color:#2874A6">The War of Taiji</a></li>
+          <li style="background-color:#212F3C; margin-top:3px; margin-bottom:3px;"><a href="Strategy_and_tactics.html" class="inactive" style="color:#2874A6">Strategy & Tactics</a></li>
+          <li style="background-color:#212F3C; margin-top:3px; margin-bottom:3px;"><a href="Merriam_Webster's.html" class="inactive" style="color:#2874A6">Merriam Webster's</a></li>
+          <li style="background-color:#212F3C; margin-top:3px; margin-bottom:3px;"><a href="以虞待不虞者勝.html" class="inactive" style="color:#2874A6">以虞待不虞者勝</a></li>
         </div>
     </ul>
     <ul class="column2" align="center" style="font-size: 25px; background-color:#3498DB; list-style: none; margin-top:0px; margin-bottom:0px;">
         <div>
-          <li style="background-color:#283747; margin-top:3px; margin-bottom:3px;"><a href="The_war_of_genesis.html" class="inactive" style="color:#3498DB">The War of Genesis</a></li>
-          <li style="background-color:#283747; margin-top:3px; margin-bottom:3px;"><a href="Stock_investment.html" class="inactive" style="color:#3498DB">Stock Investment</a></li>
-          <li style="background-color:#283747; margin-top:3px; margin-bottom:3px;"><a href="Strategy_and_tactics.html" class="inactive" style="color:#3498DB">Strategy & Tactics</a></li>
-          <li style="background-color:#283747; margin-top:3px; margin-bottom:3px;"><a href="Merriam_Webster's.html" class="inactive" style="color:#3498DB">Merriam Webster's</a></li>
-          <li style="background-color:#283747; margin-top:3px; margin-bottom:3px;"><font size="5"><a href="夫學須靜也_才須學也.html" class="inactive" style="color:#3498DB">夫學須靜也 才須學也</a></font></li>
+          <li style="background-color:#283747; margin-top:3px; margin-bottom:3px;"><a href="Game_industry_trends.html" class="inactive" style="color:#3498DB">Game Trends</a></li>
+          <li style="background-color:#283747; margin-top:3px; margin-bottom:3px;"><a href="AI_industry_trends.html" class="inactive" style="color:#3498DB">AI Trends</a></li>
+          <li style="background-color:#283747; margin-top:3px; margin-bottom:3px;"><a href="Science_and_technology.html" class="inactive" style="color:#3498DB">Science & Tech.</a></li>
+          <li style="background-color:#283747; margin-top:3px; margin-bottom:3px;"><a href="The_economist.html" class="inactive" style="color:#3498DB">The Economist</a></li>
         </div>
     </ul>
   </div>
 
-      <img src="Warofgenesis_iolin.jpg" width="100%">
+      <img src="leader1.jpg" width="100%">
 
   </div>
 </div>
